fix: align select height with input

--- a/src/styles/views/Auth/view.module.sass
+++ b/src/styles/views/Auth/view.module.sass
@@ -111,7 +111,19 @@
     color: variables.$foreground-color
 
 .SelectWallet
-  max-width: unset !important
+
+  div
+    width: 100% !important
+    border-radius: 13px !important
+
+  select
+    padding: 0.7em !important
+
+.PasswordInput
+
+  span
+    font-size: .8em
+
 
 .OkButton 
   background: orangered variables.$background-color
